# NetflixRouletteC

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  netflixroulettec.c  netflixroulettec.h  test.c
